--- a/5/sinatra/Dockerfile
+++ b/5/sinatra/Dockerfile
@@ -1,13 +1,11 @@
-FROM ubuntu:16.04
-MAINTAINER James Turnbull "james@example.com"
-ENV REFRESHED_AT 2014-06-01
-
-RUN apt-get -qq update
-RUN apt-get -qq install ruby ruby-dev build-essential redis-tools
-RUN gem install --no-rdoc --no-ri sinatra json redis
-
+FROM ubuntu:20.04
+MAINTAINER James Turnbull james@example.com
+ENV REFRESHED_AT 2020-0918
+COPY sources.list /etc/apt/sources.list
+RUN apt-get update 
+RUN apt-get -yqq install ruby  ruby-dev build-essential redis-tools
+RUN gem install --no-document  sinatra json redis
 RUN mkdir -p /opt/webapp
-
+COPY webapp_redis/ /opt/webapp
 EXPOSE 4567
-
 CMD ["/opt/webapp/bin/webapp"]
